<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2012-2018 The Android Hermes Moneymanager Project Team
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/mmx_margin"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/mmx_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Account -->
            <org.financeapps.hermesmoneymanager.view.RobotoTextView
                style="?attr/headerTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account" />

            <Spinner
                android:id="@+id/spinnerAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <requestFocus />
            </Spinner>

            <!-- Transaction Type -->
            <org.financeapps.hermesmoneymanager.view.RobotoTextView
                style="?attr/headerTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <org.financeapps.hermesmoneymanager.view.RobotoCheckBox
                    android:id="@+id/checkBoxWithdrawal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/withdrawal"
                    android:maxLines="1" />

                <org.financeapps.hermesmoneymanager.view.RobotoCheckBox
                    android:id="@+id/checkBoxDeposit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/deposit"
                    android:maxLines="1" />

                <org.financeapps.hermesmoneymanager.view.RobotoCheckBox
                    android:id="@+id/checkBoxTransfer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/transfer"
                    android:maxLines="1" />
            </LinearLayout>

            <!-- Currency -->
            <org.financeapps.hermesmoneymanager.view.RobotoTextView
                style="?attr/headerTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currency" />

            <Spinner
                android:id="@+id/spinnerCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/currency" />

            <!-- Status -->
            <org.financeapps.hermesmoneymanager.view.RobotoTextView
                style="?attr/headerTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_status" />

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/status" />

            <!-- Amount From -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <org.financeapps.hermesmoneymanager.view.RobotoTextView
                    android:id="@+id/textViewFromAmount"
                    style="?attr/holoSpinnerStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/amount_from"
                    android:textStyle="bold"
                    android:maxLines="1" />

                <org.financeapps.hermesmoneymanager.view.RobotoTextView
                    android:id="@+id/textViewToAmount"
                    style="?attr/holoSpinnerStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/amount_to"
                    android:textStyle="bold"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <org.financeapps.hermesmoneymanager.view.RobotoTextView
                    android:id="@+id/textViewFromDate"
                    style="?attr/holoSpinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/from_date"
                    android:textStyle="bold" />

                <org.financeapps.hermesmoneymanager.view.RobotoTextView
                    android:id="@+id/textViewToDate"
                    style="?attr/holoSpinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/to_date"
                    android:textStyle="bold" />
            </LinearLayout>

            <org.financeapps.hermesmoneymanager.view.RobotoTextView
                android:id="@+id/textViewSelectPayee"
                style="?attr/holoSpinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/select_payee" />

            <org.financeapps.hermesmoneymanager.view.RobotoTextView
                android:id="@+id/textViewSelectCategory"
                style="?attr/holoSpinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/select_category" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.financeapps.hermesmoneymanager.view.RobotoEditText
                    android:id="@+id/editTextTransNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/transaction_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.financeapps.hermesmoneymanager.view.RobotoEditText
                    android:id="@+id/editTextNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/mmx_padding"
                    android:gravity="top|start"
                    android:hint="@string/notes"
                    android:inputType="textMultiLine"
                    android:scrollHorizontally="false"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>